# Taint-Rev-Trace

./: .gitignore  Cargo.toml  README.md
crates/arm64-taint-core/: Cargo.toml
crates/arm64-taint-core/src/: engine.rs  indexer.rs  lib.rs  normalizer.rs  parser.rs  report.rs  streaming.rs
crates/content-search-core/: Cargo.toml  README.md
crates/content-search-core/src/: cache.rs  lib.rs  line_indexer.rs
docs/: Architecture.md  McpTools.md
exampletrace/: gdb_trace.txt
src/: app.rs  main.rs  mcp_install.rs
