[package]
name = "arm64-taint-core"
version = "0.1.0"
edition = "2021"
description = "Backward taint tracing for ARM64 execution traces"
license = "MIT"
repository = "https://github.com/Aar0n3906/content-search"
keywords = ["arm64", "taint", "trace", "analysis"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
memchr = "2"
content-search-core = { path = "../content-search-core", version = "0.1.1" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
